<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('film', function (Blueprint $table) {
            $table->id();
            $table->foreignId('genre_id')->constrained('genre')->onDelete('cascade');            $table->string('judul');
            $table->text('deskripsi')->nullable();
            $table->enum('tipe', ['film', 'acara_tv'])->default('film');
            $table->integer('durasi')->nullable();
            $table->integer('tahun_rilis')->nullable();
            $table->string('poster')->nullable();
            $table->string('url_video')->nullable();
            $table->timestamp('dibuat_pada')->nullable();
            $table->timestamp('diperbarui_pada')->nullable();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('film');
    }
};
