@startuml
skinparam classAttributeIconSize 0

class User {
  - id : BigInteger
  - nama_pengguna : String
  - kata_sandi : String
  - dibuat_pada : Timestamp
  - diperbarui_pada : Timestamp
  + getAuthPassword() : String
  + riwayatTontonan() : Collection
}

class Admin {
  - id : BigInteger
  - nama_pengguna : String
  - kata_sandi : String
  - dibuat_pada : Timestamp
  - diperbarui_pada : Timestamp
  + getAuthPassword() : String
  + kelolaFilm() : void
  + kelolaGenre() : void
}

class Genre {
  - id : BigInteger
  - nama : String
  - dibuat_pada : Timestamp
  - diperbarui_pada : Timestamp
  + film() : Collection
}

class Film {
  - id : BigInteger
  - genre_id : BigInteger
  - tipe : Enum('film', 'serial')
  - judul : String
  - deskripsi : Text
  - durasi : Integer
  - tahun_rilis : Integer
  - poster : String
  - url_video : String
  - dibuat_pada : Timestamp
  - diperbarui_pada : Timestamp
  + genre() : Genre
  + riwayatTontonan() : Collection
}

class RiwayatTontonan {
  - id : BigInteger
  - pengguna_id : BigInteger
  - film_id : BigInteger
  - progres : Integer
  - ditonton_pada : Timestamp
  + user() : User
  + film() : Film
}

Genre "1" -- "0..*" Film : memiliki >
User "1" -- "0..*" RiwayatTontonan : memiliki >
Film "1" -- "0..*" RiwayatTontonan : memiliki >
Admin "1" -- "0..*" Film : mengelola >
Admin "1" -- "0..*" Genre : mengelola >

@enduml
